<resources>
    <string name="app_name">Image Finder</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="searchBtnText">Search</string>
    <string name="search_prompt">Enter search query</string>
    <string name="imageTitle">Image Title</string>
    <string name="title_activity_image_display">Full Screen Image</string>
    <string name="noNetwork">No network connection available</string>
    <string name="fetchError">Error fetching data from the network</string>
    <string name="shareError">Error: Unable to share the image</string>

    <string name="filterSettings">Search Options</string>
    <string name="imgSize">Image Size </string>
    <string name="imgType">Image Type </string>
    <string name="imgColor">Image Color</string>
    <string name="site">From Site </string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="wallpaper">Set Background</string>
    <string name="emptyListMessage">Click on the search icon to get started</string>

    <string-array name="size_array">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="imgtype_array">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string-array name="imgcolor_array">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

</resources>
