<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccentTransparent"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="@dimen/dialog_margin"
        tools:context="com.instagramclient.sushmanayak.gridimagesearch.fragments.FilterSettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/imgSize"
                android:textColor="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/spSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:entries="@array/size_array"
                android:minWidth="@dimen/spinnerMinWidth"
                android:prompt="@string/imgSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/imgType"
                android:textColor="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/spType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:entries="@array/imgtype_array"
                android:minWidth="@dimen/spinnerMinWidth"
                android:prompt="@string/imgType" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/imgColor"
                android:textColor="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/spColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:entries="@array/imgcolor_array"
                android:minWidth="@dimen/spinnerMinWidth"
                android:prompt="@string/imgColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/site"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/etSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/site"
                android:maxLines="2"
                android:minWidth="@dimen/siteTextMinWidth" />
        </LinearLayout>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dialog_margin"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>